@@ -1,5 +1,3 @@
-#!/usr/bin/perl
-
 =pod
 
 =head1 NAME
